--- a/package.json
+++ b/package.json
@@ -64,7 +64,9 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "test": "node scripts/test.js",
+    "lint": "./node_modules/.bin/standard",
+    "lint-fix": "./node_modules/.bin/standard --fix"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -134,6 +136,19 @@
   "babel": {
     "presets": [
       "react-app"
+    ]
+  },
+  "devDependencies": {
+    "standard": "^14.3.1"
+  },
+  "standard": {
+    "ignore": [
+      "build/*"
+    ],
+    "env": [
+      "jest",
+      "es6",
+      "browser"
     ]
   }
 }
