--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ language: node_js
 node_js: "12"
 
 script:
-  -- npm test
-  -- npm run build
+  - npm test
+  - npm run build
 
 deploy:
   provider: pages
