--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "modular-synthesiser",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://sydbal.github.io/modular-synthesizer/",
   "dependencies": {
     "@babel/core": "7.7.4",
     "@svgr/webpack": "4.3.3",
