--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ node_js: "12"
 
 script:
   - npm test
-  - npm run build
+  - npm run build PUBLIC_URL=https://sydbal.github.io/modular-synthesizer/
 
 deploy:
   provider: pages
