--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
   "scripts": {
     "start": "concurrently \"npm:build\" \"npm:server\"",
     "build": "node scripts/build.js",
+    "dev": "node scripts/dev.js",
     "test": "node scripts/test.js",
     "server": "node scripts/server.js",
     "lint": "./node_modules/.bin/standard",
